make header clickable to home, fix about page jump links

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ a {
 
 a:link {
   color: black;
+  text-decoration: none;
 }
 
 a:visited {
@@ -45,6 +46,10 @@ nav {
 nav div {
   margin: 10px;
   font-size: 28px;
+  color: black;
+}
+
+nav div a:hover {
   color: black;
 }
 
@@ -93,7 +98,7 @@ footer {
   font-size: xx-small;
 }
 
-.holder {
+/*.holder {
   background: ;
   padding: 5rem;
   overflow: hidden;
@@ -111,6 +116,8 @@ footer {
     transform: translatex(100%);
   }
 }
+  */
+
 .flex-ctr {
   display: flex;
   justify-content: center;
@@ -121,3 +128,6 @@ nav,
 footer {
   grid-column: span 2;
 }
+
+/*make bookshelf scrollable horizontally
+fix links in about page*/
